# aioarxiv

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  static-analysis.yaml
aioarxiv/: __init__.py  client.py  decorators.py  errors.py  rate_limiter.py
aioarxiv/models/: __init__.py  base.py  enums.py  rss.py  search.py  utilities.py
tests/: test_api_bugs.py  test_client.py  test_context_manager.py  test_download.py  test_package.py  test_result.py
tests/mock_feeds/: empty_rss_mock_feed.xml  error_rss_mock_feed.xml  rss_mock_feed.xml
