[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioarxiv"
version = "1.1.1"
description = "Asynchronous Python wrapper for the arXiv API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "feedparser~=6.0.10",
    "aiohttp>=3.8.1",
]
dynamic = ["classifiers", "urls"]

[tool.setuptools.packages.find]
include = ["aioarxiv", "aioarxiv.*"]
