[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "aioarxiv"
version = "1.1.2"
description = "Asynchronous Python wrapper for the arXiv API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "feedparser~=6.0.10",
    "aiohttp>=3.8.1",
]
dynamic = ["classifiers", "urls"]

[tool.setuptools.packages.find]
include = ["aioarxiv", "aioarxiv.*"]